Fix footer position and mobile overlap issue

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -159,6 +159,9 @@ main {
     height: 50px;
     font-size: 16px;
   }
+footer {
+  margin-top: auto;
+  width: 100%;
 }
 
 
